接入socket，用rich-text显示分享朋友圈的图片， 考虑换成canvas或者只用canvas保存图片

--- a/project.config.json
+++ b/project.config.json
@@ -14,8 +14,8 @@
 		"checkInvalidKey": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.4.2",
-	"appid": "wxcdf566a4112fe6d6",
+	"libVersion": "2.7.7",
+	"appid": "wx486593e5100a29ff",
 	"projectname": "car",
 	"debugOptions": {
 		"hidedInDevtools": []
